# This file is part of predicator. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/predicator/master/COPYRIGHT. No part of predicator, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of predicator. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/predicator/master/COPYRIGHT.


[package]
name = "predicator"
description = "predicator allows the creation, loading, and unloading of Rust and other language plugins on the fly using LLVM's ORC JIT"
keywords = ["llvm", "jit", "orc", "plugin"]
categories = ["no-std"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/predicator/blob/master/README.md"
homepage = "https://github.com/lemonrock/predicator"
repository = "https://github.com/lemonrock/predicator.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/**/*"]
readme = "README.md"
build = "src/build.rs"
publish = true
version = "0.0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
cpp = "0.3"
libc = "0.2"
llvm-sys = "40.0.*"
rust-extra = "0.0.13"

[build-dependencies]
cpp_build = "0.3"
