# This file is part of predicator. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/predicator/master/COPYRIGHT. No part of predicator, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of predicator. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/predicator/master/COPYRIGHT.


[package]
name = "predicator"
description = "predicator allows the creation, loading, and unloading of Rust and other language plugins on the fly using LLVM's ORC JIT"
keywords = ["llvm", "jit", "orc", "plugin"]
categories = ["no-std"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/predicator"
repository = "https://github.com/lemonrock/predicator.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
build = "src/build.rs"
publish = true
version = "0.0.5"

[dependencies]
cpp = "0.3"
libc = "^0.2"
llvm-sys = "40.0.*"
maplit = "^1.0"
rust-extra = "0.0.17"
rand = "0.3"

[build-dependencies]
cpp_build = "0.3"
